# org-grd-points-filter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  gui_main.py  main.py  point-filter-gui.spec  pyproject.toml
.github/workflows/: release.yml
data/: regions.csv  regions_2split.csv  regions_3split.csv
data/region_txt/: 3_xy.txt  xy 1.txt  xy.txt
data/sample_region/: regions_sample.dbf  regions_sample.gpkg  regions_sample.shp  regions_sample.shx
docs/: detailed_design.md  requirements.md  tickets.md  vector_region_requirements.md
docs/rust/: README.md  architecture.md  verification.md
point-filter-rs/: Cargo.toml
point-filter-rs/crates/point-filter-cli/: Cargo.toml
point-filter-rs/crates/point-filter-cli/src/: main.rs
point-filter-rs/crates/point-filter-core/: Cargo.toml
point-filter-rs/crates/point-filter-core/src/: config.rs  events.rs  filter_service.rs  geometry.rs  lib.rs  models.rs  output_writer.rs  point_reader.rs  region_loader.rs  validation.rs
point-filter-rs/crates/point-filter-core/tests/: compare_python.rs  process.rs
point-filter-rs/crates/point-filter-gui/: Cargo.toml
point-filter-rs/crates/point-filter-gui/src/: app.rs  fonts.rs  labels.rs  main.rs
scripts/: extract_changelog.py
src/point_filter/: __init__.py  __main__.py  benchmark.py  cli.py  config.py  engine.py  filter_service.py  geometry.py  models.py  output_writer.py  point_reader.py  region_loader.py  validation.py
src/point_filter/gui/: __init__.py  __main__.py  help_text.py  help_window.py  labels.py  main_window.py  state.py  tooltip.py  view_model.py
tests/: test_cli_smoke.py  test_engine.py  test_filter_service.py  test_geometry.py  test_gui_view_model.py  test_region_loader.py
