[project]
name = "point-filter"
version = "0.3.0"
description = "点群を指定領域で抽出する"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
point-filter = "point_filter.cli:main"
point-filter-gui = "point_filter.gui:main"
point-filter-bench = "point_filter.benchmark:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyinstaller>=6.13.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
