[package]
name = "point-filter-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
point-filter-core = { path = "../point-filter-core" }
tracing.workspace = true
tracing-subscriber.workspace = true

