[package]
name = "point-filter-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
eframe.workspace = true
egui.workspace = true
point-filter-core = { path = "../point-filter-core" }
rfd.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

